css/site.css
body {
    font-family: "Crimson Text", "Times New Roman", serif;
    background-color: #fff;
    font-size: 120%;
    line-height: 1.5;
}

.container {
    max-width: 1330px;
    margin: auto;
    padding: 2rem;
}

footer {
    background-color: #000;
    color: #FFF;
    padding: 2rem;
}
footer h2 {
    font-size: 3rem;
}
footer a {
    color: #F99;
}

footer > .container{
    display: flex;
    flex-flow: wrap;
}

footer > .container > p{
    margin:auto;
    padding-bottom: 1rem;
}

.header-container {
    display: flex; 
    max-width: 1330px; 
    flex: 1 1 auto; 
    margin:auto;
}

.header-container-titulo{
    margin-left: 1rem;
    display: flex;
    flex: 1 1 auto;
    flex-direction: column
}

em {
    font-style: italic;
}

h1,
h2,
.subtitulo-principal {
    font-family: "Open Sans Condensed", "Arial", sans-serif;
}

h1 {
    text-shadow: 2px 2px #000;
    font-size: 3rem;
    text-transform: uppercase;
}

.icones-redes-sociais{
    margin: auto;
    padding-bottom: 1rem;
}

.icones-redes-sociais a {
    width: 40px;
    height: 40px;
    display: block;
    position: relative;
    text-indent: -99999px;
}

.icones-redes-sociais a:hover::before,
.icones-redes-sociais a:focus::before {
    content: '';
    background-color: black;
    width: 1rem;
    height: 1rem;
    position: absolute;
    bottom: 0;
    left: 0;
    transform: translateY(.8rem) rotate(45deg);
}

.icones-redes-sociais a:hover::after,
.icones-redes-sociais a:focus::after {
    content: attr(data-tooltip);
    position: absolute;
    top: 100%;
    right: 0;
    text-indent: 0;
    width: 300%;
    background: black;
    font-size: .75rem;
}

.icones-redes-sociais li {
    display: inline-block;
}

main {
    padding-bottom: 4rem;
}

main a {
    color: lightskyblue;
}

main a:hover,
main a:focus,
footer a:hover,
footer a:focus{
    color: red;
}

main p {
    text-align: justify;
    margin: 1rem 0;
}

.minha-foto {
    flex: 1 1 auto;
    height: 100px;
    max-width: 100px;
    border-radius: 50%;
    margin: 1rem;
}

ul li{
    margin: 5px;
}

.navegacao-site {
    text-align: center;
    background-color: lightskyblue;
    color: #F2FFFC;
}

.navegacao-site {
    padding: 1rem;
    display: flex;
    flex: 5 5 auto;
    justify-content: flex-end;
}

.navegacao-site a {
    color: inherit;
    font-family: "Open Sans Condensed", "Arial", sans-serif;
    text-transform: lowercase;
    text-shadow: 0 0 2px pink;
}

.navegacao-site h1 {
    font-size: 1.5rem;
    margin-bottom: 1rem;
}

.rodape-pagina {
    /*background-color: #000;*/
    color: #F2FFFC;
    padding: 1rem;
    clear: both;
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    box-sizing: border-box;
    background-image: radial-gradient(ellipse at left bottom,
    rgba(60, 29, 61, 0.8),
    rgba(60, 29, 61, 0.8) 65%,
    black 65%,
    black 70%,
    transparent 70%,
    transparent);
    background-size: 25% 100%;
    background-repeat: no-repeat;   
}

strong {
    font-weight: bold;
}

.subtitulo-texto {
    font-size: 1.5rem;
    clear: both;
}

.titulo-principal {
    text-align: center;
    background-color: lightskyblue;
    color: #FFF;
    padding: 2rem;
    border-bottom: .5rem solid #000;
}


/*Ícones*/

.github {
    background-image: url(../imagens/github.png);
}

.twitter {
    background-image: url(../imagens/twitter.png);
}

.linkedin {
    background-image: url(../imagens/linkedin.png);
}

/*end Ícones*/

/*********************
  Media Query Classes
**********************/
@media only screen and (max-width: 425px) {
    .minha-foto{
      display: none !important;
    }
  }

